added ipad portrait breakpoint and finetuned styles on mobile protrait and desktop landscape

--- a/home/templates/bestsellers.html
+++ b/home/templates/bestsellers.html
@@ -58,7 +58,7 @@
     </div>
     {% endfor %}
     {% else %}
-    <p>Bestseller criterion not met.</p>
+    <p class="no-results-message">Bestseller criterion not met.</p>
     {% endif %}
 </div>
 
