--- a/static/scss/_partials/portrait-ipad/pages/_password-reset-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_password-reset-page.scss
@@ -1,12 +1,19 @@
 .password-reset-wrapper {
     height: 70vh;
-    align-content: center;
     background-color: $page-bgr-clr;
+    min-height: 92vh;
+    padding: {
+        top: 2vw;
+    }
 }
 
 .accountform {
     width: 90vw;
     padding-top: 20px;
+}
+
+.accountform p {
+    color: white;
 }
 
 .emailfield-resetform-wrapper {
@@ -16,12 +23,11 @@
 }
 
 #password-reset-label {
-    padding-right: 5px;
-    width: 50%;
+    color: white;
 }
 
 .passwordresetform {
-    width: 70%;
+    width: 75%;
     display: flex;
     flex-wrap: wrap;
 }
@@ -31,7 +37,7 @@
 }
 
 .pw-reset-btn {
-    width: 80%;
+    width: 60%;
     font-family: $dosisFont;
     font-size: 5.5vw;
     margin-top: 6vw;
