--- a/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
@@ -1,13 +1,19 @@
 .password-reset-wrapper {
     height: 70vh;
-    align-content: center;
     background-color: $page-bgr-clr;
     min-height: 92vh;
+    padding: {
+        top: 4vw;
+    }
 }
 
 .accountform {
     width: 90vw;
     padding-top: 20px;
+}
+
+.accountform p {
+    color: white;
 }
 
 .emailfield-resetform-wrapper {
@@ -17,8 +23,7 @@
 }
 
 #password-reset-label {
-    padding-right: 5px;
-    width: 35%;
+    color: white;
 }
 
 .passwordresetform {
