--- a/static/scss/_partials/portrait-mobile/pages/_profile-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_profile-page.scss
@@ -1,5 +1,9 @@
 .profile-wrapper {
-    padding-bottom: 25vw;
+    padding: {
+        top: 4vw;
+        bottom: 25vw;
+
+    }
     background-color: $page-bgr-clr;
     min-height: 85vh;
 }
