--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -47,7 +47,7 @@
     {% endfor %}
     {% else %}
     <div id="empty-wishlist-wrapper">
-        <p>No products in your wishlist.</p>
+        <p class="no-results-message">No products in your wishlist.</p>
         <a id="empty-wishlist-product-link" class="ha" href="{% url 'products' %}"><span
                 class="glyphicon glyphicon-apple active-app"></span></a>
     </div>
