--- a/static/scss/_partials/_helpers.scss
+++ b/static/scss/_partials/_helpers.scss
@@ -34,3 +34,11 @@ $page-bgr-clr: #003553;
 $dosisFont: 'Dosis',
 sans-serif;
 $delPopupFontSize: 2vw;
+
+
+a:hover,
+a:visited,
+a:link,
+a:active {
+    text-decoration: none;
+}
