--- a/static/scss/_partials/landscape-desktop/pages/_password-reset-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_password-reset-page.scss
@@ -10,6 +10,10 @@
     padding-top: 20px;
 }
 
+.accountform p {
+    color: white;
+}
+
 .emailfield-resetform-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -17,8 +21,7 @@
 }
 
 #password-reset-label {
-    padding-right: 5px;
-    width: 50%;
+    color: white;
 }
 
 .passwordresetform {
