--- a/static/scss/_partials/landscape-desktop/pages/_products-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_products-page.scss
@@ -1,11 +1,11 @@
 .product-wrapper {
     padding: {
-        top: 1vw;
-        bottom: 1vw;
+        top: 2vw;
+        bottom: 2vw;
     }
         
     background-color: $page-bgr-clr;
-    min-height: 92vh;
+    min-height: 85vh;
 }
 
 .search-field-wrapper {
@@ -54,18 +54,15 @@
     font-family: $dosisFont;
     font-size: 1.5vw;
     width: 100%;
-    margin-top: 5px;
-}
+    margin: {
+        top: 5px;
+        bottom: 5px;
 
+    }
+}
 
 .product-description {
-    min-height: 40px;
     width: 100%;
-}
-
-h3 .product-headline {
-    text-decoration: none;
-
 }
 
 .product-stats {
@@ -75,11 +72,11 @@ h3 .product-headline {
 }
 
 .stats-key {
-    width: 23%;
+    width: 30%;
 }
 
 .stats-value {
-    width: 75%;
+    width: 70%;
 }
 
 .stats-value a {
