--- a/static/scss/_partials/landscape-ipad/_landscape-ipad.scss
+++ b/static/scss/_partials/landscape-ipad/_landscape-ipad.scss
@@ -24,7 +24,6 @@ screen and (width: 1366px) and (height: 1024px) and (orientation: landscape) {
         font-size: 4.5vw;
 
         padding: {
-            top: 1vw;
             bottom: 1vw;
 
         }
@@ -257,6 +256,8 @@ screen and (width: 1366px) and (height: 1024px) and (orientation: landscape) {
         color: rgba(255, 0, 0, 0.5);
     }
 
-
-
+    .no-results-message {
+        color: white;
+        font-size: 1.5vw;
+    }
 }
