--- a/static/scss/_partials/landscape-mobile/pages/_cart-page.scss
+++ b/static/scss/_partials/landscape-mobile/pages/_cart-page.scss
@@ -1,7 +1,11 @@
 .cart-wrapper {
-    padding-bottom: 2vw;
+    padding: {
+        top: 2vw;
+        bottom: 2vw;
+    }
+
     background-color: $page-bgr-clr;
-    min-height: 92vh;
+    min-height: 85vh;
 }
 
 .addcard-icon {
@@ -35,9 +39,9 @@
 
 .no-cart-items {
     width: 95%;
-    font-size: 1.5vw;
-    color: white;
+    font-size: 3.5vw;
     text-align: center;
+    color: white;
 }
 
 .no-cart-items a {
@@ -68,7 +72,6 @@
 .shipping-fee, #totalamount {
     width: 100%;
     font-size: 2vw;
-    color: white;
 }
 
 .glyphicon-euro {
