--- a/static/scss/_partials/landscape-mobile/pages/_checkout-page.scss
+++ b/static/scss/_partials/landscape-mobile/pages/_checkout-page.scss
@@ -1,12 +1,7 @@
 .checkout-wrapper {
-    padding: {
-        top: 4vw;
-        bottom: 25vw;
-
-    }
-
+    padding-bottom: 2vw;
     background-color: $page-bgr-clr;
-    min-height: 85vh;
+    min-height: 92vh;
 }
 
 caption p {
@@ -26,30 +21,26 @@ caption p {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 70%;
+    width: 60%;
 }
 
 .checkout-summary-items {
     width: 100%;
     color: white;
     text-align: center;
-    font-size: 7.0vw;
+    font-size: 2.0vw;
 }
 
 #payment-form {
-    margin-top: 6vw;
+    margin-top: 2vw;
+    width: 44vw;
 }
-
-#payment-form > legend {
-    color: white;
-}
-
 
 #submit_payment_btn {
     display: flex;
     justify-content: center;
-    width: 40vw;
-    font-size: 5.5vw;
+    width: 12vw;
+    font-size: 1.5vw;
     transition: color .3s ease-in-out;
 }
 
