--- a/static/scss/_partials/landscape-mobile/pages/_reviews-page.scss
+++ b/static/scss/_partials/landscape-mobile/pages/_reviews-page.scss
@@ -1,29 +1,39 @@
 .reviews-wrapper {
     padding: {
-        top: 4vw;
-        bottom: 20vw;
-
+        top: 2vw;
+        bottom: 2vw;
     }
-    background-color: $page-bgr-clr;
-    min-height: 92vh;
-}
 
-.edit-review-wrapper {
-    padding-bottom: 25vw;
-    min-height: 82vh;
-    padding-top: 10vw;
+    background-color: $page-bgr-clr;
+    min-height: 85vh;
 }
 
 .reviewcard {
-    width: 90vw;
+    width: 24vw;
+    margin: {
+        left: 5px;
+        right: 5px;
+        top: 2vw;
+    }
+}
+
+.panel-body p {
+    width: 100%;
+}
+
+.edit-review-wrapper {
+    padding-bottom: 2vw;
+    min-height: 82vh;
+    padding-top: 2vw;
+    background-color: $page-bgr-clr;
 }
 
 #review-form {
-    width: 90vw;
+    width: 30vw;
 }
 
 #id_image {
-    height: 13vw;
+    height: 3.5vw;
     display: flex;
     align-items: center;
 }
@@ -34,19 +44,19 @@
 
 #review-send-btn {
     font-family: $dosisFont;
-    font-size: 5.5vw;
+    font-size: 1.2vw;
     background-color: lightblue;
-    width: 40vw;
+    width: 8vw;
     margin-right: 2vw;
     transition: color .3s ease-in-out;
 }
 
 #review-cancel-btn {
     font-family: $dosisFont;
-    font-size: 5.5vw;
+    font-size: 1.2vw;
     background-color: orange;
     color: rgb(65, 65, 65);
-    width: 40vw;
+    width: 8vw;
     margin-left: 2vw;
     transition: color .3s ease-in-out;
 }
@@ -57,17 +67,15 @@
 }
 
 .edit-review-btn {
-    width: 31vw;
-    font-size: 7.5vw;
+    width: 4vw;
+    font-size: 2.5vw;
     color: orange;
-    text-align: right;
 }
 
 .review-del-req-btn {
-    width: 30vw;
-    font-size: 7.5vw;
+    width: 4vw;
+    font-size: 2.5vw;
     color: red;
-    text-align: right;
 }
 
 .review-stats {
@@ -78,9 +86,10 @@
 
 .review-btn-bar {
     margin: {
-        top: 4vw;
-        bottom: 4vw;
+        top: 1vw;
+        bottom: 1vw;
     }
+
     width: 100%;
     display: flex;
     justify-content: center;
@@ -90,9 +99,9 @@
 .back-to-reviews-btn,
 .return-product-btn,
 .review-details-btn {
-    width: 33vw;
+    width: 10vw;
     font-family: $dosisFont;
-    font-size: 4.5vw;
+    font-size: 1.2vw;
     color: rgb(65, 65, 65);
     transition: color .3s ease-in-out;
 }
@@ -118,13 +127,16 @@
 }
 
 
-.back-to-products-btn:hover, .back-to-reviews-btn:hover, .review-details-btn:hover, return-product-btn:hover {
-    color:darkred;
+.back-to-products-btn:hover,
+.back-to-reviews-btn:hover,
+.review-details-btn:hover,
+return-product-btn:hover {
+    color: darkred;
 }
 
 .review-headline {
     font-family: $dosisFont;
-    font-size: 7.5vw;
+    font-size: 2.0vw;
     width: 100%;
 }
 
@@ -137,8 +149,8 @@
     background-color: beige;
     border-radius: 5px;
     border: 1px solid grey;
-    width: 80vw;
-    height: 40vw;
+    width: 24vw;
+    height: 32vh;
     position: fixed;
     opacity: 0.0;
     z-index: -1;
@@ -154,11 +166,6 @@
 .delete-popup-message {
     width: 80%;
 
-    margin: {
-        top: 2vw;
-        bottom: 2vw;
-    }
-
     font: {
         family: $dosisFont;
         size: $delPopupFontSize;
@@ -169,7 +176,7 @@
     background-color: lightcoral;
     color: rgb(65, 65, 65);
     margin-right: 2px;
-    width: 35vw;
+    width: 6vw;
     transition: color .3s ease-in-out;
     text-decoration: none;
 }
@@ -180,7 +187,7 @@
 }
 
 .delete-cancel-btn {
-    width: 35vw;
+    width: 6vw;
     background-color: lightslategray;
     margin-left: 2px;
     font-family: $dosisFont;
