--- a/static/scss/_partials/portrait-ipad/pages/_checkout-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_checkout-page.scss
@@ -45,5 +45,9 @@ caption p {
     justify-content: center;
     width: 40vw;
     font-size: 5.5vw;
+    transition: color .3s ease-in-out;
+}
 
+#submit_payment_btn:hover {
+    color: darkred;
 }
