--- a/static/scss/_partials/portrait-ipad/pages/_reviews-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_reviews-page.scss
@@ -1,6 +1,9 @@
 .reviews-wrapper {
-    padding-top: 5vw;
-    padding-bottom: 20vw;
+    padding: {
+        top: 2vw;
+        bottom: 20vw;
+
+    }
     background-color: $page-bgr-clr;
     min-height: 92vh;
 }
@@ -12,7 +15,11 @@
 }
 
 .reviewcard {
-    width: 90vw;
+    width: 70vw;
+    margin: {
+        left: 10px;
+        right: 10px;
+    }
 }
 
 #review-form {
@@ -54,14 +61,14 @@
 }
 
 .edit-review-btn {
-    width: 31vw;
+    width: 21vw;
     font-size: 7.5vw;
     color: orange;
     text-align: right;
 }
 
 .review-del-req-btn {
-    width: 30vw;
+    width: 20vw;
     font-size: 7.5vw;
     color: red;
     text-align: right;
@@ -87,7 +94,7 @@
 .back-to-reviews-btn,
 .return-product-btn,
 .review-details-btn {
-    width: 33vw;
+    width: 30vw;
     font-family: $dosisFont;
     font-size: 4.5vw;
     color: rgb(65, 65, 65);
@@ -121,8 +128,7 @@
 
 .review-headline {
     font-family: $dosisFont;
-    font-size: 7.5vw;
-    margin-bottom: 6vw;
+    font-size: 6.5vw;
     width: 100%;
 }
 
