--- a/static/scss/_partials/portrait-mobile/pages/_register-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_register-page.scss
@@ -2,7 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    padding-bottom: 20vw;
+    padding: {
+        top: 4vw;
+        bottom: 20vw;
+
+    }
     background-color: $page-bgr-clr;
 }
 
